INCLUDE_DIRECTORIES(include)

SET(CMAKE_CXX_FLAGS "-std=c++0x -O2 -g")
SET(CMAKE_CXX_FLAGS_DEBUG -DMPCAP_DEBUG)

SET(MPCAP_SOURCES
    pcap/reader.cc
    protocol/ethernet/address.cc
    protocol/ipv4/address.cc
    protocol/tcp/address.cc
    protocol/tcp/packet.cc
    protocol/tcp/reassembler.cc)

SET(MPCAP_SHARED_LIBRARY_OUTPUT mpcap)
ADD_LIBRARY(${MPCAP_SHARED_LIBRARY} SHARED ${MPCAP_SOURCES})
SET_TARGET_PROPERTIES(${MPCAP_SHARED_LIBRARY} PROPERTIES OUTPUT_NAME ${MPCAP_SHARED_LIBRARY_OUTPUT})

SET(MPCAP_STATIC_LIBRARY_OUTPUT mpcap)
ADD_LIBRARY(${MPCAP_STATIC_LIBRARY} STATIC ${MPCAP_SOURCES})
SET_TARGET_PROPERTIES(${MPCAP_STATIC_LIBRARY} PROPERTIES OUTPUT_NAME ${MPCAP_STATIC_LIBRARY_OUTPUT})

INSTALL(TARGETS ${MPCAP_STATIC_LIBRARY} ARCHIVE DESTINATION lib)
INSTALL(TARGETS ${MPCAP_SHARED_LIBRARY} LIBRARY DESTINATION lib)
INSTALL(DIRECTORY include/mpcap DESTINATION include FILES_MATCHING PATTERN "*.h")
